Texture storing and visualising logic

--- a/src/DiplomaGame/Assets/Config/configPaths.json
+++ b/src/DiplomaGame/Assets/Config/configPaths.json
@@ -1,4 +1,5 @@
 ﻿{
   "cameraConfigPath": "Assets/Config/camera/cameraConfig.json",
-  "mapConfigPath": "Assets/Config/map/mapConfig.json"
+  "mapConfigPath": "Assets/Config/map/mapConfig.json",
+  "texturesPath": "Assets/Config/textures/terrain/terrainTexturesConfig.json"
 }
