--- a/src/DiplomaGame/Assets/Config/configPaths.json
+++ b/src/DiplomaGame/Assets/Config/configPaths.json
@@ -1,5 +1,5 @@
 ﻿{
-  "cameraConfigPath": "Assets/Config/camera/cameraConfig.json",
-  "mapConfigPath": "Assets/Config/map/mapConfig.json",
-  "texturesPath": "Assets/Config/textures/terrain/terrainTexturesConfig.json"
+  "CameraConfigPath": "Assets/Config/camera/cameraConfig.json",
+  "MapConfigPath": "Assets/Config/map/mapConfig.json",
+  "TexturesPath": "Assets/Config/textures/terrain/terrainTexturesConfig.json"
 }
