--- a/src/DiplomaGame/Assets/Config/textures/terrain/terrainTexturesConfig.json
+++ b/src/DiplomaGame/Assets/Config/textures/terrain/terrainTexturesConfig.json
@@ -1,30 +1,30 @@
 ﻿{
-  "texturesPath": "Assets/Textures/Terrain",
-  "defaultTextureSize": 64,
-  "tilemapSprites": [
+  "TexturesPath": "Assets/Textures/Terrain",
+  "DefaultTextureSize": 64,
+  "TilemapSprites": [
     {
-      "id": 0,
-      "name": "None",
-      "textureFileName": "none.png",
-      "textureResolution": 64
+      "Id": 0,
+      "Name": "None",
+      "TextureFileName": "none.png",
+      "TextureResolution": 64
     },
     {
-      "id": 1,
-      "name": "Grass",
-      "textureFileName": "grass.png",
-      "textureResolution": 64
+      "Id": 1,
+      "Name": "Grass",
+      "TextureFileName": "grass.png",
+      "TextureResolution": 64
     },
     {
-      "id": 2,
-      "name": "Desert",
-      "textureFileName": "desert.png",
-      "textureResolution": 64
+      "Id": 2,
+      "Name": "Desert",
+      "TextureFileName": "desert.png",
+      "TextureResolution": 64
     },
     {
-      "id": 3,
-      "name": "Dirt",
-      "textureFileName": "dirt.png",
-      "textureResolution": 64
+      "Id": 3,
+      "Name": "Dirt",
+      "TextureFileName": "dirt.png",
+      "TextureResolution": 64
     }
   ]
 }
